avangelsin-deployed-yaml-files/wordpress-dep.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: avangelsinwp
  name: avangelsinwp
  namespace: avangelsin
#  annotations:
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: avangelsinwp
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: avangelsinwp
  name: avangelsinwp
  namespace: avangelsin
spec:
  replicas: 1
  selector:
    matchLabels:
      name: avangelsinwp
  template:
    metadata:
      labels:
        name: avangelsinwp
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: avangelsinwp
        volumeMounts:
        - mountPath: /var/www/html
          name: avangelsinwp-volume
        - mountPath: /usr/local/etc/php/conf.d/uploads.ini
          name: php-config
          subPath: uploads.ini
      volumes:
      - name: "avangelsinwp-volume"
        persistentVolumeClaim:
          claimName: avangelsinwp-pv
      - name: php-config
        configMap:
          name: "avangelsin-efs-php-config"
